Checkpoint: Updated March 7th, 2025

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -5,70 +5,126 @@
 
 % ----- Name + Contact Information -----
 \resumeheader[
-    firstname=John,
-    middleinitial=N,
-    lastname=Doe,
-    email=john.doe@example.com,
-    % phone=123-456-7890,
-    linkedin=johndoe,
-    github=johndoe,
-    % city=Town,
-    % state=State,
+    firstname=Christopher,
+    lastname=Celaya,
+    email=chris@chriscelaya.com,
+    phone=915-270-0237,
+    % linkedin=christophercelaya,
+    github=while-basic,
+    city=El Paso,
+    state=TX,
     qrcode=./images/qr.png
 ]
 
-\objective{A software engineering graduate with 2 years of work
-    experience at various internships seeking opportunities to develop
-    web/mobile applications for Company XYZ.}
+\objective{Industrial Technician with expertise in AI/ML Engineering, specializing in intelligent
+automation, predictive maintenance, and industrial data analytics. 11+ years of experience in
+manufacturing environments, troubleshooting electrical and mechanical systems, and optimizing
+operations. Excited about leveraging technology to improve efficiency, reduce downtime, and enhance
+decision-making in smart factories.}
 
 % ----- Work Experience -----
 \section{Work Experience}
 
-\experience{Radiant Software Systems}{%
-    \role{Software Engineer}{2021 - 2024}{
-        \achievement{
-
-            Developed a mobile app in \tech{React Native} that was
-            downloaded 100k times on Google Play.
-
-        }
+\experience{T5 Data Centers}{%
+    \role{Critical Facilities Data Center Technician II}{Sept 2021 - June 2022}{
+        \achievement{Maintain and operate both critical and non-critical data center infrastructure, equipment, and systems.}
+        \achievement{Achieved 100\% uptime for critical infrastructure by leading PM's on systems utilizing CMMS.}
+        \achievement{Supervise external contractors, ensuring adherence to critical facility workplace rules.}
     }
-    \role{Summer Intern}{2021}{
-        \achievement{
+}
 
-            Collaborated in an \tech{Agile/Scrum} team of 8 engineers to
-            deliver new features every 2 weeks.
+\experience{CN Wire}{%
+    \role{Electro-Mechanic}{Jan 2018 - Sept 2021}{
+        \achievement{Enhanced equipment reliability through troubleshooting electrical systems, HMI panels, and sensors.}
+        \achievement{Maintain a number of cooling, compression and emulsion systems required for facility operations.}
+        \achievement{Install, maintain, and troubleshoot electrical components and equipment for process equipment.}
+    }
+}
 
-        }
+\experience{Schneider Electric}{%
+    \role{Wiring Technician | Quality Assurance}{May 2016 - Dec 2017}{
+        \achievement{Improved quality by 20\% by overseeing testing/assembly of electrical panels and resolving defects.}
+        \achievement{Interpret point-to-point diagrams, bill of materials, and wiring schematics.}
+        \achievement{Oversee testing and assembly of low voltage electronic products.}
+    }
+}
+
+\experience{Delfingen}{%
+    \role{Maintenance Technician}{Dec 2015 - Dec 2016}{
+        \achievement{Manage maintenance on equipment, including extrusion, pneumatic, hydraulic, water, and electrical.}
+        \achievement{Carry out tasks including equipment repair, electrical troubleshooting, and preventative maintenance.}
+        \achievement{Determine and resolve issues with corrugated screws, cutters, pullers, and printing systems.}
+        \achievement{Complete additional duties such as welding, fabrication, including building maintenance.}
+    }
+}
+
+\experience{Dal-Tile}{%
+    \role{Maintenance Technician III}{Feb 2013 - Oct 2015}{
+        \achievement{Install and maintain hydraulic press, electrical panels and mechanical components.}
+        \achievement{Acknowledge machine malfunctions, install electro-mechanical valves, and perform routine maintenance.}
+        \achievement{Carry out additional routine maintenance on raw material conveyors, dust, compression, and cooling systems.}
+        \achievement{Operate industrial hydraulic systems, serve oil changes, and routine die-block quality checks.}
+        \achievement{Manage materials processing and storage, including silos, conveyors, spray dryers, ball mills, and vibrating screens.}
     }
 }
 
 % ----- Technical Projects -----
 \section{Technical Projects}
 
-\project{Expressive Resume}{2021-2024}{
+\project{Medchat}{AI/ML Medical LLM}{
+    \achievement{Developed a web application for healthcare professionals with accurate diagnoses.}
+    \achievement{Technologies Used: \tech{Python}, \tech{Next.js}, \tech{Tailwind CSS}}
+}
 
-    \achievement{
-        Created a \tech{\LaTeX} class
-        that enables anyone to quickly
-        create a beautiful resume
-        and cover letter.
-    }
+\project{Minecraft AI Bot}{LLM}{
+    \achievement{Trained LLM using real-world game data to build autonomously, reducing intervention by 95\%.}
+    \achievement{Technologies Used: \tech{JavaScript}, \tech{Python}, \tech{Google Colab}, \tech{Minecraft}, \tech{Reinforcement Learning}}
+}
 
+\project{Gemini Pro Vision}{AI/ML Computer Vision, Full-Stack}{
+    \achievement{Developed a chatbot with real-time vision and text-to-speech capabilities using machine vision.}
+    \achievement{Technologies Used: \tech{JavaScript}, \tech{Next.js}, \tech{Tailwind CSS}, and \tech{Gemini API}}
+}
+
+\project{chriscelaya.com}{Web Development}{
+    \achievement{Designed a personal portfolio website using Next.js. Features resume, experience, and projects.}
+    \achievement{Technologies Used: \tech{Next.js}, \tech{JavaScript}, \tech{Vercel}, and \tech{Supabase}}
+}
+
+\project{Midi Saber}{Game Development, VR, Web Development}{
+    \achievement{Created a MIDI-powered interface to generate beat maps for Beat Saber using a MIDI drum pad.}
+    \achievement{Technologies Used: \tech{JavaScript}, \tech{Unity}, \tech{Novation}, and \tech{Beat Saber}}
 }
 
 % ----- Education -----
 \section{Education}
 
-\degree{B.S. Software Engineering \honors{Summa Cum Laude}}{Super Duper University}{2022}{
-    \achievement{Ranked \#15 out of 463 students}
+\degree{Bachelor of Science in Electrical Engineering}{University of Texas at El Paso}{GPA: 3.5/4.0}{
+    \achievement{Focus in Fields and Devices - Incomplete} 
+}   
+
+\degree{Bachelor of Science in Computer Science}{El Paso Community College}{GPA: 3.7/4.0}{
+    \achievement{Focus in Cyber Security - Incomplete}
 }
 
-% ----- Awards -----
-\section{Awards}
+% ----- Skills -----
+\section{Skills}
 
-\award{Employee of the Month}{Radiant Software Systems}{2023}{
-    \achievement{Did some amazing stuff that really benefitted the company}
-}
+\begin{itemize}
+    \item \textbf{Software Development:} Python, C, JS, TS, Next.js, React.js, Tailwind, TensorFlow, Java, Pytorch
+    \item \textbf{Databases \& Tools:} Docker, SQL, MongoDB, PostgreSQL, Redis, Azure, AWS, Blockchain
+    \item \textbf{Industrial Infrastructure:} Preventative Maintenance, CMMS, HMI, SCADA, Machine Vision
+    \item \textbf{Leadership \& Management:} Team Training, Workflow Optimization, Process Improvement
+    \item \textbf{AI/ML Training \& Development:} CUDA, HuggingFace, Kaggle, Google Colab
+    \item \textbf{Hardware:} NVIDIA H100s \& A100s for large language model training
+\end{itemize}
+
+% ----- Certifications -----
+\section{Certifications}
+
+\begin{itemize}
+    \item NFPA 70E | Electrical Safety
+    \item OSHA 10 | Construction Safety
+\end{itemize}
 
 \end{document}
